[gd_scene load_steps=8 format=3 uid="uid://dr3i1iolhbl3p"]

[ext_resource type="Script" uid="uid://dpi3nxouqk44n" path="res://main_menu_ui.gd" id="1_s1b4o"]
[ext_resource type="Texture2D" uid="uid://d1siyguybpifg" path="res://start1.png" id="2_s1b4o"]
[ext_resource type="PackedScene" uid="uid://cr2l2p5s7tem3" path="res://parallax_layer_2.tscn" id="3_aehlx"]
[ext_resource type="Texture2D" uid="uid://d0mm64yajbyyu" path="res://start pressed1.png" id="3_bycpm"]
[ext_resource type="Texture2D" uid="uid://bxrce7fph6ag2" path="res://quit1.png" id="4_s1b4o"]
[ext_resource type="Texture2D" uid="uid://bgigpbuhhq4km" path="res://quit pressed1.png" id="5_bycpm"]
[ext_resource type="PackedScene" uid="uid://bk6vt3drx5t43" path="res://parallax_layer.tscn" id="6_bycpm"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_s1b4o")

[node name="MenuUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -133.0
offset_right = 128.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxLayer" parent="MenuUI/VBoxContainer" instance=ExtResource("6_bycpm")]
position = Vector2(-832, -407)

[node name="ParallaxLayer2" parent="MenuUI/VBoxContainer" instance=ExtResource("3_aehlx")]
position = Vector2(65, 19)

[node name="StartButton" type="TextureButton" parent="MenuUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_s1b4o")
texture_pressed = ExtResource("3_bycpm")
texture_hover = ExtResource("3_bycpm")

[node name="QuitButton" type="TextureButton" parent="MenuUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_s1b4o")
texture_pressed = ExtResource("5_bycpm")
texture_hover = ExtResource("5_bycpm")
